Updated config , removed token

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "TOKEN": "MTM1NzAyNjA5MDA1MjQ4NTMxMA.G7M2P6.jT5AyiaMGa_ED8TCOUKnLUayEsRlB_7biF94hE",
+    "TOKEN": "CodeHere for Token",
     "CHANNEL_ID": 1356602637406961725
 }
